# GameOfLife

./: .gitignore  CMakeLists.txt  GameOfLife.sln  README.md
Dependencies/: CMakeLists.txt
Dependencies/ImGUI/: CMakeLists.txt
Dependencies/NFD/lib/: nfd_d.lib
GOLAlgoLib/: CMakeLists.txt
GOLAlgoLib/src/: GameGrid.cpp  GameGrid.h  HashLife.cpp  LifeAlgorithm.h  SparseLife.cpp
GOLGraphicsLib/: CMakeLists.txt  GOLGraphicsLib.vcxproj  GOLGraphicsLib.vcxproj.filters
GOLGraphicsLib/src/: Camera.cpp  GraphicsHandler.h  ShaderManager.cpp
GOLGuiLib/: CMakeLists.txt  GOLGuiLib.vcxproj  GOLGuiLib.vcxproj.filters
GOLGuiLib/src/dialogs/: PopupWindow.cpp
GOLGuiLib/src/misc/: RLEEncoder.h
GOLLoggingLib/: CMakeLists.txt  GOLLoggingLib.vcxproj  GOLLoggingLib.vcxproj.filters
GOLRunner/: CMakeLists.txt  GOLRunner.vcxproj
GameOfLife/: GameOfLife.vcxproj  GameOfLife.vcxproj.filters  imgui.ini
GameOfLife/config/: imgui_style.yaml  style.yaml
GameOfLife/resources/shader/: default.shader
GameOfLife/shader/: default.shader
GameOfLife/src/: Application.cpp  Camera.cpp  Camera.h  DelayWidget.cpp  DelayWidget.h  EditorWidget.cpp  EditorWidget.h  ExecutionWidget.cpp  ExecutionWidget.h  GLException.h  GUILoader.h  Game.cpp  Game.h  GameActionButton.cpp  GameActionButton.h  GameEnums.cpp  GameEnums.h  GameGrid.cpp  GameGrid.h  GameWindow.cpp  GameWindow.h  Graphics2D.h  GraphicsHandler.cpp  GraphicsHandler.h  KeyShortcut.cpp  KeyShortcut.h  Logger.cpp  Logger.h  Logging.cpp  Logging.h  RLEEncoder.h  ResizeWidget.cpp  ResizeWidget.h  SelectionManager.cpp  SelectionManager.h  ShaderManager.cpp  ShaderManager.h  SimulationControl.cpp  SimulationControl.h  SimulationControlResult.h  (+8 more)
GameOfLife/src/graphics/: GraphicsHandler.cpp  GraphicsHandler.h
GameOfLife/src/misc/: ConfigLoader.h  Logging.h  RLEEncoder.cpp  RLEEncoder.h
GameOfLife/src/ui/: KeyShortcut.cpp  KeyShortcut.h  SelectionManager.cpp  SelectionManager.h  SimulationControlResult.h  VersionManager.cpp  VersionManager.h  WarnWindow.cpp
GameOfLife/src/ui/components/: PresetSelection.cpp  PresetSelection.h  SimulationControl.cpp  SimulationControl.h  SimulationEditor.cpp  SimulationEditor.h
GameOfLife/src/ui/dialogs/: FileDialog.cpp  FileDialog.h  WarnWindow.cpp
GameOfLife/src/ui/widgets/: ActionButton.h  DelayWidget.cpp  DelayWidget.h  EditorWidget.cpp  EditorWidget.h  ExecutionWidget.cpp  ExecutionWidget.h  FileWidget.cpp  FileWidget.h  ResizeWidget.cpp  ResizeWidget.h  StepWidget.cpp  StepWidget.h  WarnWindow.h
GameOfLife/templates/: spaceship.gol
HashLife/: HashLife.vcxproj
HashLife/src/: HashLife.h  Hashlife.cpp  Node.h
